MangoBajito/tests/Lenguajes_2/Declaracion/valid/15-coliao_anidado.mng
# Test 14: Definicion y uso del tipo Coliao a nivel anidado.
se_prende(){
	coliao Informacion {
		status : tas_claro;
		data : higuerote;
	};
	coliao Persona {
		nombre : higuerote;
		datos : Informacion;
	};

	culito yo : Persona;
	culito ella : Persona;
	culito el : Persona;

	yo.nombre = "Junior";
	ella.nombre = "Astrid";
	el.nombre = "Jhonaiker";	
	culito nombres : higuerote[3] = [ella.nombre, el.nombre, yo.nombre];

	yo.datos.status = Sisa;
	ella.datos.status = Nolsa;
	el.datos.status = Sisa;
	culito estados : tas_claro[3] = [ella.datos.status, el.datos.status, yo.datos.status];

	yo.datos.data = "data para mi";
	ella.datos.data = "data para ella";
	el.datos.data = "data para el";
	culito datas : mango[3] = [ella.datos.data, el.datos.data, yo.datos.data];
};