MangoBajito/tests/Lenguajes_2/Declaracion/errors/14-coliao.mng
# Test 14: Errores de uso del tipo Coliao.
se_prende(){
	coliao Persona {
		nombre : higuerote;
		sexo : negro;
		edad : mango;
	};

	culito yo : Persona;
	culito ella : Persona;
	culito el : Persona;
	
	culito nombres : higuerote[3] = [ella.nombre, el.nombre, yo.nombre];
	culito sexos : negro[3] = [ella.sexo, el.sexo, yo.sexo];
	culito edades : mango[3] = [ella.edad, el.edad, yo.edad];
};